@startuml "Data Layer Class Diagram"

title "Діаграма класів шару доступу до даних"

skinparam linetype ortho
skinparam classAttributeIconSize 0

class "IdentityDbContext<ApplicationUser>" as IdentityDbContext <<framework>>
class IdentityUser <<framework>>

class AuthProviderDbContext {
    + AuthProviderDbContext(DbContextOptions)
}

class ApplicationUser

IdentityDbContext <|-down- AuthProviderDbContext
IdentityUser <|-- ApplicationUser
AuthProviderDbContext "1" -up-> "*" ApplicationUser : зберігання >

@enduml